TommyLe - Updated loginPopupForm to shift the form align with the signin button. Created a new media for a max-width of 992px to set the margin correctly for that screen size. We may have to do this again for the largest screen size.

--- a/Tinville/static/css/main2.css
+++ b/Tinville/static/css/main2.css
@@ -253,7 +253,7 @@ body {
 @media (min-width: 992px) {
   .loginPopupForm 
   {
-      margin-right: 1066% ;
+      margin-right: 2.54% ;
     /*width: 232px;*/
   }
 }
@@ -261,7 +261,7 @@ body {
 @media (max-width: 992px) {
   .loginPopupForm 
   {
-      margin-right: 500% ;
+      margin-right: 4% ;
     /*width: 232px;*/
   }
 }
